--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     -->
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <script src="https://unpkg.com/dexie@3.2.0-rc.2/dist/dexie.js"></script>
 	<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
